# acayipwidgets

./: .clang-format  CMakeLists.txt  COPYING.md  README.md  acayipconfig.h.in  acayipglobal.cpp  acayipglobal.h  acayipglobal.h.in  acayipstyle.cpp  acayipstyle.h  acayipstyle.json  acayipstyle_p.cpp  acayipstyle_p.h  acayipstyle_p_p.h  acayipstyleplugin.cpp  acayipstyleplugin_p.cpp  acayiputils.cpp  acayiputils.h  boxlayout.cpp  boxlayout.h  boxlayout_p.h  button.cpp  button.h  button_p.h  pixelperfectscaling.cpp  pixelperfectscaling.h  pixelperfectscaling_p.cpp  pixelperfectscaling_p.h  pushbutton.cpp  pushbutton.h  pushbutton_p.h  qtbaggage_p.cpp  tabs.cpp  tabs.h  tabs_p.h  utils_p.cpp  utils_p.h
LICENSES/: LicenseRef-AcayipWidgets-Commercial.txt
acayipstyle/: acayipstyle_p.cpp  acayipstyleplugin_p.h
lottie/: lottie.json  lottiehandler_p.cpp  lottiehandler_p.h  lottieplugin_p.cpp  lottieplugin_p.h  lottierasterrenderer_p.cpp  lottierasterrenderer_p.h
plugins/: CMakeLists.txt
plugins/iconengines/: CMakeLists.txt
plugins/iconengines/pixelperfect/: CMakeLists.txt  main.cpp  pixelperfect.json  pixelperfecticonengine.cpp  pixelperfecticonengine.h
plugins/imageformats/: CMakeLists.txt
plugins/imageformats/lottie/: CMakeLists.txt  lottieiohandler.cpp  lottieiohandler.h  lottierasterrenderer.cpp  lottierasterrenderer.h  main.cpp
plugins/styles/: CMakeLists.txt
plugins/styles/acayip/: CMakeLists.txt  acayipstyle.cpp  acayipstyle.h  main.cpp
